Update coaches section with correct content

--- a/soccer.html
+++ b/soccer.html
@@ -77,7 +77,7 @@ slides:
         		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
         	</div>
 
-        <!-- Modal -->
+        <!-- YouTube Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -107,25 +107,44 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Chris Gardner" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Chris Gardner</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Mike Barclay</h5>
             <h6 class="coach-title">Head Coach</h6></a>
-            <p>815&#8209;802&#8209;8609<br>
-            cgardner@kcc.edu</p>
+            <p>815&#8209;802&#8209;8618<br>
+            mbarclay@kcc.edu</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistant Coach John Hall" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Donnie Gardner Sr.</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">John Hall</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
           </div>
         </div>
       </div>
-      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name">Keion Joseph "Cruz"</h5>
+            <h6 class="coach-title">Assistant Coach</h6></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row coach-row-marg">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name">James Ashby</h5>
+            <h6 class="coach-title">Assistant Coach</h6></a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Coach Modals -->
@@ -138,13 +157,15 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name editable">Chris Gardner</h5>
+        <img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay." class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">Mike Barclay</h5>
         <h6 class="coach-title editable">Head Coach</h6>
-        <p>815&#8209;802&#8209;8609<br>
-        cgardner@kcc.edu</p><br>
+        <p>815&#8209;802&#8209;8618<br>
+        mbarclay@kcc.edu</p><br>
         <div class="editable">
-          <p>Chris Gardner is in his second season as head coach for the Cavaliers. In his first season, he led the Cavaliers to a 22-10 record, along with breaking two school records in three pointers made in a single game (17) and three pointers in a single season (294).</p>
+          <p>Mike Barclay is entering his fourth year as Head Soccer Coach for the Cavaliers. He was the assistant coach during the 2012 and 2013 seasons.</p>
+          <p>Coach Barclay was a three-time all-region, two-time all-sectional and two-time all-state goalie for Downers Grove South High School (1983-85). For three seasons, Coach Barclay played NCAA Division I collegiate soccer for Eastern Illinois University in Charleston. He still holds rankings as no. 1 in saves percentage, no. 2 in goals against average and no. 3 in total saves in EIU history. In 1989, Coach Barclay lead the Panthers to the NCAA Division I National Indoor Championship for the first time in school history. He also played for one season in the semi-pro Chicago Metro League.</p>
+          <p>In addition to coaching at KCC, Barclay was the goalkeeper coach for Olivet Nazarene University (Bourbonnais) women's team from 2002-12. He has coached numerous recreational teams for Dynamo Soccer and travel teams for Southland Strikers FC for more than 16 years. Barclay has a U.S. Soccer Federation (USSF) “E” certification. He resides in Bourbonnais, with his wife Tammie and their five children.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -162,11 +183,56 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name editable">Donnie Gardner Sr.</h5>
+        <img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistan Coach John Hall." class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">John Hall</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-          <p>Assistant Coach Donnie Gardner Sr. is in his first season with the Cavaliers. Gardner has an extensive background working with youth in multiple sports. He coached and mentored youth from ages 5-18 in the Youth Basketball Association from 1986-99, he was an assistant at Beasley Academic Center from 1994-96, and he coached Little League Baseball from 1987-1996 with South Side Little League and Jackie Robinson West. Coach Gardner also served as attendance coordinator at Whitney Young High School from 1996-2001.</p>
+          <p>Coach Hall is entering his third season as an assistant at KCC. Hall comes to the Cavaliers with a diverse background/history in soccer. He is president of Dynamo Soccer League in Bourbonnais, which has served more than 1,000 youth players per year since 2008. Hall is not only a former player for Olivet Nazarene University, but h​as coached numerous travel teams for USSA-DUFC (United Select Soccer Association & Dabrico United Futbol Club), Chicago Magic, and other independent teams. He is a licensed referee, and holds a U.S. Soccer Federation (USSF) "E" license. Hall resides in Bourbonnais with his wife, Cassie, and their four children.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+        <div class="editable">
+          <p>A Caribbean native from the island of Trinidad & Tobago and standout player for KCC during the 2010 and 2011 seasons, Cruz will be entering his first year as an assistant coach.</p>
+          <p>Cruz is the current director of coaching for Southland FC Strikers and brings five years of coaching experience. He also keeps busy as one of the premier private trainers in the Chicago area by leading Cruz Coaching. He currently resides in Manteno with his fiancé Christina.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h5 class="coach-name editable">James Ashby</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+        <div class="editable">
+          <p>Coach Ashby, entering his third year as an assistant coach with KCC, has more than 36 years of soccer experience on multiple levels. During his high school career at Rich South High School, Ashby received several recognitions as a center back. One notable honor was National Soccer Coaches Association of America (NSCAA) defensive player of the year. Coach Ashby is a staff coach with Southland Strikers FC and has trained players of all ages, and many of them continue on to the collegiate level.</p>
+          <p>Coach Ashby is licensed through the NSCAA and U.S. Soccer Federation (USSF) with specialties in goalkeeping and agility. He currently resides in Manteno with his 3 children.</p>
         </div>
       </div>
       <div class="modal-footer">
