--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -107,25 +107,33 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Chris Gardner" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Coach Donnie Denson" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Chris Gardner</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Donnie Denson</h5>
             <h6 class="coach-title">Head Coach</h6></a>
-            <p>815&#8209;802&#8209;8609<br>
-            cgardner@kcc.edu</p>
+            <p>815&#8209;802&#8209;8614<br>
+            ddenson@kcc.edu</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Donnie Gardner Sr.</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Walt Shipman</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
           </div>
         </div>
       </div>
-      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Casey Meister</h5>
+            <h6 class="coach-title">Assistant Coach</h6></a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Coach Modals -->
@@ -138,13 +146,17 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name editable">Chris Gardner</h5>
+        <img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">Donnie Denson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
-        <p>815&#8209;802&#8209;8609<br>
-        cgardner@kcc.edu</p><br>
+        <p>815&#8209;802&#8209;8614<br>
+        ddenson@kcc.edu</p><br>
         <div class="editable">
-          <p>Chris Gardner is in his second season as head coach for the Cavaliers. In his first season, he led the Cavaliers to a 22-10 record, along with breaking two school records in three pointers made in a single game (17) and three pointers in a single season (294).</p>
+          <p>A native of the Peoria area, Donnie Denson has worked at KCC for the past 25 years, and is proud to call Kankakee home.</p>
+          <p>Being employed by the college has brought about many positive experiences over the years for Denson. This is the 25th  season he has been associated with the women’s basketball team in some capacity. He was an assistant coach of the Lady Cavaliers from 1997 until being named head coach for the 2000-01 season.</p>
+          <p>Over the last 18 seasons with Denson at the helm, the Lady Cavaliers have compiled a 441-128 record, and a winning percentage of .775. He has continued to build upon the program's history of success, and the Cavaliers have won the Region IV championship 21 times in the last 27 years.</p>
+          <p>Denson came to KCC as a Fitness Center specialist and athletic trainer in 1992, and is currently the assistant athletic director.</p>
+          <p>Denson graduated from Farmington East High School in Farmington. He earned a bachelor’s degree from Eureka College. He resides in Kankakee with his wife, Deb, and their son, David.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -162,11 +174,40 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name editable">Donnie Gardner Sr.</h5>
+        <img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">Walt Shipman</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-          <p>Assistant Coach Donnie Gardner Sr. is in his first season with the Cavaliers. Gardner has an extensive background working with youth in multiple sports. He coached and mentored youth from ages 5-18 in the Youth Basketball Association from 1986-99, he was an assistant at Beasley Academic Center from 1994-96, and he coached Little League Baseball from 1987-1996 with South Side Little League and Jackie Robinson West. Coach Gardner also served as attendance coordinator at Whitney Young High School from 1996-2001.</p>
+          <p>Walt Shipman, in his eighth season for the Cavaliers, came to us after serving four years as the assistant women’s basketball coach at South Suburban College. Previously, he served as the head sophomore and assistant varsity girls basketball coach at Rich Central High School and then at Marian Catholic High School.</p>
+          <p>In addition to coaching high school and college, he organized and served as the first president of the Babe Ruth League in the Quad Cities; managed baseball for 20 years, first in the Quad Cities and then in Homewood; served two terms as president of the Homewood-Flossmoor High School Booster Club and currently is sponsor of the Homewood Small Fry Basketball program, after coaching there 15 years.</p>
+          <p>Walt is assistant executive director on the International Small Fry Board of Directors and is a member of the Illinois Basketball Coaches Association and the NCAA Women’s Basketball Coaches Association. Walt and his wife, Ruth, reside in Crete.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name editable">Casey Meister</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+        <div class="editable">
+          <p>A former KCC player, Casey Hadley Meister is in her fourth season as women's basketball assistant coach. Meister has experience as a community college, NCAA Division I, and NAIA Division I athlete. With her playing and coaching experience, she provides guidance to the student-athletes on reaching the next level, plus valuable input and game planning for the staff.</p>
+          <p>Meister has six years coaching experience at Tri-Point High School, 2008-11 as an assistant and 2011-14 as head coach. As assistant for her father, Marcus Hadley, Tri-Point went from a few wins per season to a .500 record. Then, while she was head coach, Tri-Point became even more competitive and finished second in the River Valley Conference all three seasons. Three players from Tri-Point also attended KCC on basketball scholarships during this time.</p>
+          <p>Meister graduated from Reed-Custer High School in 2004 with multiple basketball honors including All-State two times. She still holds the scoring record for the Kankakee All-Area All-Star game (34 points).</p>
+          <p>She played for Coach Denson and the Lady Cavaliers from 2004-06. At KCC, Meister was named to the All-Region team (2005) and was MVP of the Region Tournament in 2006. She earned NJCAA All-American honors in 2005 and 2006. She also played in the national tournament in 2006.</p>
+          <p>Meister continued her basketball career with a scholarship to Chicago State University. She then played her senior year at Olivet Nazarene University. That team won the Chicagoland Collegiate Athletic Conference Tournament, was nationally ranked, and went to the CCAC National Tournament (2008).</p>
+          <p>Meister is an art teacher at Tri-Point High School and lives in Cullom with her husband, Todd, and their two beautiful twin girls, Hadley and Harper.</p>
         </div>
       </div>
       <div class="modal-footer">
