--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ slides:
   - image: uploads/header-bg3.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsoum Lorem
+    text2: Ipsum Lorem
 ---
 
-<div class="container index-slider-container">
+<div class="container slider-container">
   <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
