--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ slides:
   - image: uploads/header-bg3.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem
+    text2: Ipsum Lorem!
 ---
 
 <div class="container index-slider-container">
