Updated 'soccer.html' via CloudCannon

--- a/soccer.html
+++ b/soccer.html
@@ -24,7 +24,7 @@ slides:
   - image: uploads/soccer-slide-5_D51_3186.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem
+    text2: Ipsum Lorem!
 ---
 
 <div class="container slider-container">
