--- a/baseball.html
+++ b/baseball.html
@@ -6,6 +6,7 @@ base: baseball
 sport: 2
 slides:
   - image: uploads/header-bg2.jpg
+    alt-text: "Photo of the Cavaliers baseball team celebrating their 2017 NJCAA Division II National Championship victory."
     url: 'http://www.kcc.edu'
     text1:
       June 6, 2017 | Baseball
@@ -13,30 +14,34 @@ slides:
       2017 NJCAA DIVISION II
       NATIONAL CHAMPIONS
   - image: uploads/baseball-hero2.jpg
+    alt-text: ""
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-hero3.jpg
+    alt-text: ""
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-slide-4_D51_0559.jpg
+    alt-text: ""
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-slide-5_D72_7775.jpg
+    alt-text: ""
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
 ---
 
 <div class="container slider-container">
-  <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
+  <a href="http://www.njcaa.org/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
     {% for slide in page.slides %}
       <div>
-        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
         <div class="heading-container">
           <h3 class="sub-heading">{{slide.text1}}</h3>
           <h3 class="slide-heading">{{slide.text2}}</h3>
