--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Athletics
 sport: 1
 slides:
   - image: uploads/header-bg2.jpg
+    alt-text:
     url: 'http://www.kcc.edu'
     text1:
       June 6, 2017 | Baseball
@@ -12,22 +13,44 @@ slides:
       2017 NJCAA DIVISION II
       NATIONAL CHAMPIONS
   - image: uploads/header-bg.jpg
+    alt-text:
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/header-bg3.jpg
+    alt-text:
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem!
+    text2: Ipsum Lorem
+  - image: uploads/softball-slide-5_D51_3077.jpg
+    alt-text:
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/wbasketball-slide-2_D51_0015.jpg
+    alt-text:
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/volleyball-slide-3_D4S_6473.jpg
+    alt-text:
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/basketball-slide-4_DSC_3172.jpg
+    alt-text:
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
 ---
 
 <div class="container index-slider-container">
-  <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
+  <a href="http://www.njcaa.org/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
     {% for slide in page.slides %}
       <div>
-        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
         <div class="heading-container">
           <h3 class="sub-heading">{{slide.text1}}</h3>
           <h3 class="slide-heading">{{slide.text2}}</h3>
