Remove <p> tags from coach email
<p> tag from phone # wraps both

--- a/baseball.html
+++ b/baseball.html
@@ -119,7 +119,7 @@ slides:
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">815&#8209;802&#8209;8616<br>
-            <p>tpost@kcc.edu</p>
+            tpost@kcc.edu</p>
           </div>
         </div>
       </div>
