Update coaches section and modal

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -112,24 +112,16 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Chris Gardner" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Chris Gardner</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Alex Thorson</h5>
             <h6 class="coach-title">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8609<br>
-            cgardner@kcc.edu</p>
+            athorson@kcc.edu</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid coach-img modal-link"></a></div>
-          <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Donnie Gardner Sr.</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
-          </div>
-        </div>
-      </div>
+      <div class="col-md-4"></div>
       <div class="col-md-4"></div>
     </div>
   </div>
@@ -144,12 +136,17 @@ slides:
       </div>
       <div class="modal-body">
         <img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name editable">Chris Gardner</h5>
+        <h5 class="coach-name editable">Alex Thorson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8609<br>
-        cgardner@kcc.edu</p><br>
+        athorson@kcc.edu</p><br>
         <div class="editable">
-          <p>Chris Gardner is in his second season as head coach for the Cavaliers. In his first season, he led the Cavaliers to a 22-10 record, along with breaking two school records in three pointers made in a single game (17) and three pointers in a single season (294).</p>
+          <p>Head Coach Alex Thorson is in his first year as head coach of the Cavaliers. He comes to KCC after serving two years as a graduate assistant men’s basketball coach at Olivet Nazarene University. Coach Thorson brings a great passion and tremendous knowledge for the game to the Cavaliers.</p>
+          <p>At Olivet, Thorson was mentored by Illinois Basketball Coaches Association, Chicagoland Collegiate Athletic Conference Athletics, and National Association of Intercollegiate Athletics Hall of Fame Coach Ralph Hodge who is entering his 40th season as head coach of the Tigers.</p>
+          <p>Coach Thorson brings experience in recruiting, team preparation, player development, strength and conditioning, and building relationships. With his connections in the Chicagoland, Central Illinois, and Indiana areas, he is excited to start building a winning environment for the KCC Men’s Basketball Team.</p>
+          <p>A native of Philo, Ill., he attended the High School of St. Thomas More in Champaign for three years, and completed his high school career at his hometown school, Tolono Unity. He accepted a scholarship to continue his college career at Olivet, and played point guard for four seasons and 101 games. He is 19th all-time in assists for the Tigers. Thorson led the CCAC in assists (157), assists per game (5.41), and assist/turnover ratio (3.6:1) his senior season. In his final two seasons, the Tigers played in the NAIA Div. II National Championship; including a junior campaign where the team won the CCAC Tournament title and Regular Season championship.</p>
+          <p>Thorson graduated from Olivet in 2016 with a bachelor's degree in sports management. He is completing a Master's of Business Administration, also from Olivet.</p>
+          <p>Coach Thorson is excited to build a championship culture in the men’s basketball program at KCC. He looks forward to encouraging players every day to better themselves from an academic, social, and basketball standpoint.</p>
         </div>
       </div>
       <div class="modal-footer">
