Add editable class to static banners

--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@ layout: landing
 baseurl: ../
 base: about
 title: About
-hero: uploads/facilities-banner.jpg
 ---
 {% include about-nav.html %}
 <!-- About content -->
@@ -11,7 +10,7 @@ hero: uploads/facilities-banner.jpg
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}{{page.hero}}" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/facilities-banner.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
       </div>
     </div>
   </div>
