--- a/about/student-athletes/index.html
+++ b/about/student-athletes/index.html
@@ -3,14 +3,13 @@ layout: page
 baseurl: ../../
 base: about
 title: Student-Athlete Experience
-hero: uploads/student-athlete-lab.jpg
 ---
 {% include about-nav.html %}
 <section class="sub-nav-marg">
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}{{page.hero}}" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/student-athlete-lab.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
       </div>
     </div>
   </div>
