--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -31,7 +31,7 @@ title: Fitness Center
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}uploads/D41_3957fchome.jpg" class="img-fluid hero" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/D41_3957fchome.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
       </div>
     </div>
   </div>
