--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@ title: Athletics
 sport: 1
 slides:
   - image: uploads/header-bg2.jpg
-    alt-text:
+    alt-text: Baseball Championship
     url: 'http://www.kcc.edu'
-    text1:
-      June 6, 2017 | Baseball
-    text2:
-      2017 NJCAA DIVISION II
-      NATIONAL CHAMPIONS
+    text1: Baseball Championship 2017
+    text2: 2017 NJCAA DIVISION II NATIONAL CHAMPIONS
   - image: uploads/header-bg.jpg
     alt-text:
     url: 'http://www.kcc.edu'
