Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -119,7 +119,7 @@ slides:
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">
-                815‑802‑8620<br />tpost@kcc.edu
+                815‑802‑8616<br />tpost@kcc.edu
             </p>
           </div>
         </div>
@@ -154,7 +154,7 @@ slides:
         <p>815&#8209;802&#8209;8616<br />
         tpost@kcc.edu</p><br />
         <div class="editable">
-            <p>Head Coach Todd Post brings enthusiasm and a passion for the game to the field every day. TEST</p>
+            <p>Head Coach Todd Post brings enthusiasm and a passion for the game to the field every day.</p>
             <p>Post has completed 17 seasons as the Cavaliers head coach, with a record of 710-322-6. Prior to becoming head coach in 2001, he was the assistant coach for seven years.</p>
             <p>During Coach Post's tenure, the Cavaliers have averaged more than 41 wins per season, and 143 players have gone on to play at the next level. Since 2001, 62 Cavs have been named All-Region, 22 have been named All-Americans, and nine have signed professional contracts.</p>
             <p>In 2017 Post coached the Cavaliers to the NJCAA Division II National Championship, defeating Mercer County C.C. (N.J.), 11-5 in Enid, Okla. The Cavaliers finished with a record of 54-11-1. In 2009 they finished 3rd at the World Series with a record of 52-14-1. In all, the Cavs have won seven Region IV Championships and have made five World Series appearances.</p>
@@ -186,7 +186,7 @@ slides:
         <p>815&#8209;802&#8209;8609<br />
         bshafer@kcc.edu</p><br />
         <div class="editable">
-            <p>Coach Shafer is entering his third season as an assistant at KCC. Shafer attended Valparaiso University from 2007-10 prior to being selected by the Chicago Cubs in the 2010 Major League Baseball Amateur Draft. In 2010 at Valparaiso, Shafer tallied 121 strikeouts, second-most in Crusader history and third m​ost in Horizon League history, earning him Horizon League Pitcher of the Year and First Team All-Conference honors. TEST</p>
+            <p>Coach Shafer is entering his third season as an assistant at KCC. Shafer attended Valparaiso University from 2007-10 prior to being selected by the Chicago Cubs in the 2010 Major League Baseball Amateur Draft. In 2010 at Valparaiso, Shafer tallied 121 strikeouts, second-most in Crusader history and third m​ost in Horizon League history, earning him Horizon League Pitcher of the Year and First Team All-Conference honors.</p>
             <p>Shafer pitched in the Cubs organization from 2010 to 2012, posting a career 2.99 ERA and striking out 110 batters in 111.1 innings. In 2013 Shafer pitched for the Frontier Greys and in 2014 for the River City Rascals, both in the Frontier League of Independent Baseball.</p>
             <p>For the Cavaliers, he works with pitchers and catchers and assists with recruiting. Shafer also works as an academic success coach for the Athletic Department. Coach Shafer has a bachelor's degree in psychology from Ft. Hayes State University (2015).</p>
             <p>In addition to his coaching at KCC, Shafer has served as head coach of the varsity boys basketball team at Peotone High School. Coach Shafer resides in Manteno with his wife, Jill, and their son, Carver.</p>
