Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ slides:
     alt-text:
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem!!!
+    text2: Ipsum Lorem
 ---
 
 <div class="container index-slider-container">
